--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -9,9 +9,9 @@ jobs:
       - name: done
         run: echo "done"
       - name: test
-        uses: actions/checkout
+        uses: actions/checkout@v3
       - name: install Node
-        uses: actions/setup-node
+        uses: actions/setup-node@v3
         with:
           node-verison: 18
       - name: install dependdencies
