--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -2,7 +2,15 @@ name: workflow
 
 on:
   workflow_dispatch:
-
+  pull_request:
+    types: 
+      - opened
+  push: 
+    branches: 
+      - main
+      - 'dev-*'
+    paths-ignore:
+      - '.github/workflows/*'
 jobs: 
   first-job:
     runs-on: ubuntu-latest
